--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     //implementation 'org.modelmapper:modelmapper:3.0.0'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.1.0'
+
 
 }
 
